--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 								+1 222 777 6565
 							</li>
 							<li class="header-top-contact">
-								<a href="#">masuk</a>
+								<a href="login/index.html">masuk</a>
 							</li>
 							<li class="header-top-contact">
 								<a href="#">daftar</a>
