--- a/login/index.html
+++ b/login/index.html
@@ -26,6 +26,7 @@
           <div class="field">
             <form action="">
             <input type="submit" value="MASUK">
+            <a href="">MASUK</a>
           </div>
         </form>
         <div class="login">Atau Masuk Dengan</div>
