--- a/login/index.html
+++ b/login/index.html
@@ -24,9 +24,9 @@
             <a href="#">Lupa Sandi?</a>
           </div>
           <div class="field">
+            <a href="">MASUK</a>
             <form action="">
             <input type="submit" value="MASUK">
-             <a href="index.html">MASUK</a>
           </div>
         </form>
         <div class="login">Atau Masuk Dengan</div>
@@ -39,7 +39,8 @@
           </div>
         </div>
         <div class="signup">Belum Punya Akun?
-          <a href="#">Daftar Sekarang</a>
+            <form action="">
+            <input type="submit" value="Daftar Sekarang">
         </div>
       </div>
     </div>
