--- a/login/index.html
+++ b/login/index.html
@@ -24,7 +24,7 @@
             <a href="#">Lupa Sandi?</a>
           </div>
           <div class="field">
-            <a href="">MASUK</a>
+            <a href="index.html">MASUK</a>
             <form action="">
             <input type="submit" value="MASUK">
           </div>
