--- a/login/index.html
+++ b/login/index.html
@@ -24,7 +24,6 @@
             <a href="#">Lupa Sandi?</a>
           </div>
           <div class="field">
-            <a href="index.html">MASUK</a>
             <form action="">
             <input type="submit" value="MASUK">
           </div>
@@ -39,8 +38,7 @@
           </div>
         </div>
         <div class="signup">Belum Punya Akun?
-            <form action="">
-            <input type="submit" value="Daftar Sekarang">
+          <a href="#">Daftar Sekarang</a>
         </div>
       </div>
     </div>
