--- a/login/index.html
+++ b/login/index.html
@@ -24,7 +24,7 @@
             <a href="#">Lupa Sandi?</a>
           </div>
           <div class="field">
-            <form action="">
+            <form action="index.html">
             <input type="submit" value="MASUK">
           </div>
         </form>
