--- a/login/index.html
+++ b/login/index.html
@@ -23,7 +23,7 @@
           <div class="pass">
             <a href="#">Lupa Sandi?</a>
           </div>
-          <div class="field">
+          <div class="login">
             <form action="index.html">
             <input type="submit" value="MASUK">
           </div>
