--- a/login/index.html
+++ b/login/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ld<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -10,7 +10,7 @@
     <div class="bg-img">
       <div class="content">
         <header>Formulir Masuk</header>
-        <form action="#">
+        <form action="index.html">
           <div class="field">
             <span class="fa fa-user"></span>
             <input type="text" required placeholder="Email atau Nomor Telepon">
@@ -23,7 +23,7 @@
           <div class="pass">
             <a href="#">Lupa Sandi?</a>
           </div>
-          <div class="login">
+          <div class="field">
             <form action="index.html">
             <input type="submit" value="MASUK">
           </div>
